force-app/main/default/objects/Leave__c/fields/Sick_Leave_Taken__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Taken__c</fullName>
    <label>Sick Leave Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>