force-app/main/default/objects/Leave__c/fields/Total_Consumer_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumer_Leave__c</fullName>
    <formula>Annual_Leave_Taken__c + Casual_Leave_Taken__c + Sick_Leave_Taken__c = Total_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Consumer Leave</label>
    <type>Checkbox</type>
</CustomField>