force-app/main/default/objects/Leave__c/fields/Total_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Total Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>