force-app/main/default/objects/Leave__c/validationRules/Total_Leave_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Leave_Count</fullName>
    <active>true</active>
    <errorConditionFormula>Sick_Leave_Taken__c  +  Annual_Leave_Taken__c  +  Casual_Leave_Taken__c &gt;30</errorConditionFormula>
    <errorMessage>sorry, you have exceeded the total number of leave</errorMessage>
</ValidationRule>